--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Kitsune Develop</title>
 </head>
 <body class="body">
   <header class="header">
-    <h1 class="h1 h1_place_header">Kitsune Develop</h1>
+    <div class="circle-gradient"></div>
+    <div class="logo logo_place_header"></div>
+    <h1 class="h1 h1_place_header">KITSUNE DEVELOP</h1>
   </header>
   <main class="content">
 
