--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Kitsune Develop</title>
 </head>
 <body class="body">
@@ -13,7 +13,7 @@
     <h1 class="header__title">KITSUNE DEVELOP</h1>
   </header>
   <main class="content">
-    
+
   </main>
   <footer class="footer">
 
