--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
   <title>Kitsune Develop</title>
 </head>
 <body class="body">
-  <header class="header">
-    <div class="header__circle-gradient"></div>
-    <h1 class="header__title">KITSUNE DEVELOP</h1>
-  </header>
-  <main class="content">
 
+  <header class="header">
+    <div class="header__content">
+      <div class="header__logo"></div>
+      <p class="header__text">Маленькая команда <s class="header__text_decoration_line-through">инженегров-пограмистов</s> инженеров-программистов</p>
+      <p class="header__text">Вместо бюрократии мы привыкли заниматься проектами и решениями, искать новые развличения и занятия в IT мире.</p>
+      <div class="header__dzen">
+        <div class="dzen__leters rotation"></div>
+        <div class="dzen__man fluctuation"></div>
+      </div>
+    </div>
+  </header>
+
+  <main class="content">
+    gg
   </main>
   <footer class="footer">
 
