--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="">
+  <meta property="og:site_name" content="Kitsune Develop">
+  <meta property="og:url" content="https://kitsunedevelop.github.io">
+  <meta property="og:description" content="Маленькая команда инженегров-пограмистов">
+  <meta property="og:image" content="img/og_img.svg">
   <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css">
   <title>Kitsune Develop</title>
@@ -23,7 +28,7 @@
   </header>
 
   <main class="content">
-    gg
+    gg0
   </main>
   <footer class="footer">
 
