--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="">
+  <meta property="og:title" content="Не открывай">
   <meta property="og:site_name" content="Kitsune Develop">
   <meta property="og:url" content="https://kitsunedevelop.github.io">
   <meta property="og:description" content="Маленькая команда инженегров-пограмистов">
@@ -28,7 +28,7 @@
   </header>
 
   <main class="content">
-    gg0
+    gg01
   </main>
   <footer class="footer">
 
