--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:site_name" content="Kitsune Develop">
   <meta property="og:url" content="https://kitsunedevelop.github.io">
   <meta property="og:description" content="Маленькая команда инженегров-пограмистов">
-  <meta property="og:image" content="img/og_img.svg">
+  <meta property="og:image" content="img/og_img.img">
   <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css">
   <title>Kitsune Develop</title>
@@ -28,7 +28,7 @@
   </header>
 
   <main class="content">
-    gg01
+    g
   </main>
   <footer class="footer">
 
