--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <p class="header__text">Маленькая команда <s class="header__text_decoration_line-through">инженегров-пограмистов</s> инженеров-программистов</p>
       <p class="header__text">Вместо бюрократии мы привыкли заниматься проектами и решениями, искать новые развличения и занятия в IT мире.</p>
       <div class="header__dzen">
-        <div class="dzen__leters rotation"></div>
+        <div class="overflow">
+          <div class="dzen__leters rotation"></div>
+        </div>
         <div class="dzen__man fluctuation"></div>
       </div>
     </div>
