--- a/index.html
+++ b/index.html
@@ -1,39 +1,18 @@
 <!DOCTYPE html>
-<html class="html" lang="ru">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Не открывай">
-  <meta property="og:site_name" content="Kitsune Develop">
-  <meta property="og:url" content="https://kitsunedevelop.github.io">
-  <meta property="og:description" content="Маленькая команда инженегров-пограмистов">
-  <meta property="og:image" content="img/og_img.img">
-  <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
-  <link rel="stylesheet" href="style/style.css">
-  <title>Kitsune Develop</title>
+  <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon">
+  <title>Kitsune develop</title>
 </head>
 <body class="body">
 
+  <!-- Header section -->
   <header class="header">
-    <div class="header__content">
-      <div class="header__logo"></div>
-      <p class="header__text">Маленькая команда <s class="header__text_decoration_line-through">инженегров-пограмистов</s> инженеров-программистов</p>
-      <p class="header__text">Вместо бюрократии мы привыкли заниматься проектами и решениями, искать новые развличения и занятия в IT мире.</p>
-      <div class="header__dzen">
-        <div class="overflow">
-          <div class="dzen__leters rotation"></div>
-        </div>
-        <div class="dzen__man fluctuation"></div>
-      </div>
-    </div>
+    
   </header>
 
-  <main class="content">
-    g
-  </main>
-  <footer class="footer">
-
-  </footer>
 </body>
 </html>
